--- a/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
@@ -491,16 +491,6 @@
     <value>Not modified</value>
     <comment>Renamed name is the same as the original</comment>
   </data>
-  <data name="DevMessage" xml:space="preserve">
-    <value>Developer message</value>
-  </data>
-  <data name="WelcomeText" xml:space="preserve">
-    <value>Welcome to Brainf*ck#!
-Thank you for downloading the app, I hope you'll enjoy using it!
-Please feel free to send me an email if you have suggestions or feedback, or if you found a bug, and I'll be happy to help.
-
-NOTE: the app might sometimes crash when loading a source code. That's due to a bug in one of the controls I'm using, I've already sent a feedback to Microsoft and hopefully that'll get fixed soon!</value>
-  </data>
   <data name="ChangelogButton.Title" xml:space="preserve">
     <value>Changelog</value>
   </data>
@@ -813,5 +803,20 @@ This way he'll be able to help you!</value>
   </data>
   <data name="UserGuidePBrainExtensions" xml:space="preserve">
     <value>PBrain extensions</value>
+  </data>
+  <data name="WelcomePart1.Text" xml:space="preserve">
+    <value>Thank you for downloading the app, I hope you'll enjoy using it!</value>
+  </data>
+  <data name="WelcomePart2.Text" xml:space="preserve">
+    <value>Please feel free to send me an email if you have suggestions or feedback, or if you found a bug, and I'll be happy to help.</value>
+  </data>
+  <data name="WelcomePart3.Text" xml:space="preserve">
+    <value>The app might sometimes crash when loading a source code. That's due to a bug in one of the controls I'm using, I've already sent a feedback to Microsoft and hopefully that'll get fixed soon!</value>
+  </data>
+  <data name="WelcomePart4.Text" xml:space="preserve">
+    <value>Before jumping straight into the app, it might be a good idea to read the user guide to make sure you remember all there is to know about the language!</value>
+  </data>
+  <data name="WelcomeTitle" xml:space="preserve">
+    <value>Welcome to Brainf*ck#!</value>
   </data>
 </root>
