--- a/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
@@ -383,15 +383,6 @@
     <value>Non modificato</value>
     <comment>Renamed name is the same as the original</comment>
   </data>
-  <data name="DevMessage" xml:space="preserve">
-    <value>Messaggio dello sviluppatore</value>
-  </data>
-  <data name="WelcomeText" xml:space="preserve">
-    <value>Benvenuti in Brainf*ck#, grazie di aver scaricato quest'app!
-Potete mandarmi un messaggio email in qualsiasi momento se avete suggerimenti o feedback, o se avete trovato un bug, e sarò felice di aiutare.
-
-NOTA: l'app potrebbe occasionalmente chiudersi durante il caricamento di un codice sorgente salvato. Questo è dovuto ad un bug in uno dei controlli che l'app utilizza, ho già mandato una segnalazione a Microsoft e spero che si possa risolvere il problema al più presto!</value>
-  </data>
   <data name="Changelog" xml:space="preserve">
     <value>Novità</value>
   </data>
@@ -556,9 +547,7 @@ In questo modo sarà più facile aiutarti e potrai contribuire a rendere l'app a
     <value>Stato console</value>
   </data>
   <data name="GuideIntroduction1.Text" xml:space="preserve">
-    <value>Brainf*ck è un linguaggio di programmazione esoterico inventato nel 1993 da Urban Müller.
-
-</value>
+    <value>Brainf*ck è un linguaggio di programmazione esoterico inventato nel 1993 da Urban Müller.</value>
   </data>
   <data name="GuideIntroduction2.Text" xml:space="preserve">
     <value>Il linguaggio stesso replica il funzionamento di una macchina di Touring, poiché lo stato dell'interprete è descritto solo da un vettore di memoria e da un puntatore che può spostarsi in due direzioni e modificare il valore delle celle di memoria, quando vi passa sopra.</value>
@@ -633,7 +622,7 @@ In questo modo sarà più facile aiutarti e potrai contribuire a rendere l'app a
     <value>Una buona strategia per imparare a programmare in Brainf*ck, come in tutte le altre cose, consiste nell'iniziare da programmi più piccoli e semplici per poi renderli man mano più complessi col tempo.</value>
   </data>
   <data name="GuideSamples2.Text" xml:space="preserve">
-    <value>Per esempio, un'operazione comunque consiste nel resettare la cella attuale, a prescindere da quale fosse il suo valore.</value>
+    <value>Per esempio, un'operazione comune consiste nel resettare la cella attuale, a prescindere da quale fosse il suo valore.</value>
   </data>
   <data name="GuideSamples3.Text" xml:space="preserve">
     <value>In questo caso può essere utilizzato un semplice ciclo:</value>
@@ -709,5 +698,20 @@ In questo modo sarà più facile aiutarti e potrai contribuire a rendere l'app a
   </data>
   <data name="UserGuidePBrainExtensions" xml:space="preserve">
     <value>Estensione PBrain</value>
+  </data>
+  <data name="WelcomeTitle" xml:space="preserve">
+    <value>Benvenuto in Brainf*ck#!</value>
+  </data>
+  <data name="WelcomePart1.Text" xml:space="preserve">
+    <value>Grazie di aver scaricato quest'app!</value>
+  </data>
+  <data name="WelcomePart2.Text" xml:space="preserve">
+    <value>Puoi mandarmi un messaggio email in qualsiasi momento se hai suggerimenti o feedback, o se hai trovato un bug, e sarò felice di aiutare.</value>
+  </data>
+  <data name="WelcomePart3.Text" xml:space="preserve">
+    <value>L'app potrebbe occasionalmente chiudersi durante il caricamento di un codice sorgente salvato. Questo è dovuto ad un bug in uno dei controlli che l'app utilizza, ho già mandato una segnalazione a Microsoft e spero che si possa risolvere il problema al più presto!</value>
+  </data>
+  <data name="WelcomePart4.Text" xml:space="preserve">
+    <value>Prima di passare subito all'azione, è una buona idea leggere la guida dell'app per essere sicuri di ricordarsi tutto ciò che c'è da sapere sul linguaggio!</value>
   </data>
 </root>
