--- a/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
@@ -177,15 +177,6 @@
   <data name="CodeLibraryButton.Label" xml:space="preserve">
     <value>Sfoglia libreria codici</value>
   </data>
-  <data name="Sum" xml:space="preserve">
-    <value>Somma</value>
-  </data>
-  <data name="UnicodeSum" xml:space="preserve">
-    <value>Somma Unicode</value>
-  </data>
-  <data name="UnicodeValue" xml:space="preserve">
-    <value>Valore Unicode</value>
-  </data>
   <data name="RunTitle" xml:space="preserve">
     <value>Esegui</value>
   </data>
@@ -271,9 +262,6 @@
   </data>
   <data name="CodeSavedBody" xml:space="preserve">
     <value>Il nuovo codice sorgente è stato salvato correttamente</value>
-  </data>
-  <data name="HeaderComments" xml:space="preserve">
-    <value>Header commentato</value>
   </data>
   <data name="Debug" xml:space="preserve">
     <value>Debug</value>
@@ -713,5 +701,17 @@ In questo modo sarà più facile aiutarti e potrai contribuire a rendere l'app a
   </data>
   <data name="MoveButton.Label" xml:space="preserve">
     <value>Sposta cursore</value>
+  </data>
+  <data name="0441153F-E40A-4AEC-8373-8A552697778B" xml:space="preserve">
+    <value>Somma</value>
+  </data>
+  <data name="78BAA70A-0DAF-4BB6-B09A-CDA9537D2FFF" xml:space="preserve">
+    <value>Somma Unicode</value>
+  </data>
+  <data name="10768D40-5E3D-4787-9CB8-2A0ABBE26EFC" xml:space="preserve">
+    <value>Valore Unicode</value>
+  </data>
+  <data name="63156CB7-1BD1-46EA-A705-AC2ADD4A5F11" xml:space="preserve">
+    <value>Header commentato</value>
   </data>
 </root>
