--- a/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
+++ b/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
@@ -807,24 +807,20 @@ In questo modo sarà più facile aiutarti e potrai contribuire a rendere l'app a
           <target state="translated">In molte situazioni è utile salvare una copia della cella attuale, per poter effettuare operazioni con il suo valore senza perdere il riferimento dello stato originario della cella di memoria.</target>
         </trans-unit>
         <trans-unit id="GuideSamples5.Text" translate="yes" xml:space="preserve">
-          <source>To achieve this, it is possible to create two copies of the current value, resetting the current cell, and then move the second copy back to the first cell, to end up with the original value plus a copy in the following cell.</source>
-          <target state="translated">A questo fine, è possibile creare due copie separate del valore attuale, resettando la cella attuale, e successivamente spostare la seconda copia indietro nella posizione della cella iniziale, per ottenere il valore originario e una copia nella cella successiva.</target>
+          <source>To achieve this, it is possible to create two copies of the current value, resetting the current cell, and then move the second copy back to the first cell, to end up with the original value plus a copy in the following cell:</source>
+          <target state="translated">A questo fine, è possibile creare due copie separate del valore attuale, resettando la cella attuale, e successivamente spostare la seconda copia indietro nella posizione della cella iniziale, per ottenere il valore originario e una copia nella cella successiva:</target>
         </trans-unit>
         <trans-unit id="GuideSamples6.Text" translate="yes" xml:space="preserve">
-          <source>All these techniques can be combined to write more complex programs.</source>
-          <target state="translated">Tutte queste tecniche possono essere combinate per scrivere programmi più complessi.</target>
+          <source>All these techniques can be combined to write more complex programs. A good idea is to try to optimize the script in order to perform as few operations as possible — generally this also means that the final code will be shorter and easier to read.</source>
+          <target state="translated">Tutte queste tecniche possono essere combinate per scrivere programmi più complessi. È una buona idea cercare di ottimizzare gli script al fine di effettuare meno operazioni possibile — questo generalmente significa anche che il codice finale sarà più corto e più facile da comprendere.</target>
         </trans-unit>
         <trans-unit id="GuideSamples7.Text" translate="yes" xml:space="preserve">
-          <source>A good idea is to try to optimize the script in order to perform as few operations as possible — generally this also means that the final code will be shorter and easier to read.</source>
-          <target state="translated">È una buona idea cercare di ottimizzare gli script al fine di effettuare meno operazioni possibile — questo generalmente significa anche che il codice finale sarà più corto e più facile da comprendere.</target>
+          <source>In this example, to print the word "Hello" two loops will be used to set two cells to values closer to the letters that will be printed. It's definitely better to use a similar approach than to repeating the + operator 72 times to print the "H" character:</source>
+          <target state="translated">In questo esempio, per stampare la parola "Hello" saranno utilizzati due cicli per settare due celle di memoria a valori prossimi a quelli dei caratteri da stampare. È decisamente meglio un approccio simile rispetto a ripetere l'operatore + 72 volte solo per stampare il carattere "H":</target>
         </trans-unit>
         <trans-unit id="GuideSamples8.Text" translate="yes" xml:space="preserve">
-          <source>In this example, to print the word "Hello" two loops will be used to set two cells to values closer to the letters that will be printed. It's definitely better to use a similar approach than to repeating the + operator 72 times to print the "H" character.</source>
-          <target state="translated">In questo esempio, per stampare la parola "Hello" saranno utilizzati due cicli per settare due celle di memoria a valori prossimi a quelli dei caratteri da stampare. È decisamente meglio un approccio simile rispetto a ripetere l'operatore + 72 volte solo per stampare il carattere "H".</target>
-        </trans-unit>
-        <trans-unit id="GuideSamples9.Text" translate="yes" xml:space="preserve">
           <source>This script will set the cells #2 and #3 to values closer to the characters that will be printed by the program, so that less operations will be needed to get to the actual values the code wants to display to the user.</source>
-          <target state="translated">Questo script setta le celle #2 e #3 ai valori più vicini a quelli dei caratteri che saranno stampati dal programma, in modo che siano necessarie meno operazioni possibile per raggiungere i valori che saranno effettivamente mostrati all'utente.</target>
+          <target state="translated">Questo script setta le celle #2 e #3 ai valori più vicini a quelli dei caratteri che saranno stampati dal programma, in modo che siano necessarie meno operazioni per raggiungere i valori che verranno effettivamente mostrati all'utente.</target>
         </trans-unit>
         <trans-unit id="GuideSampleSimpleLoopComment1.Text" translate="yes" xml:space="preserve">
           <source>Copy in the cells #1 and #2</source>
@@ -933,6 +929,46 @@ In questo modo sarà più facile aiutarti e potrai contribuire a rendere l'app a
         <trans-unit id="63156CB7-1BD1-46EA-A705-AC2ADD4A5F11" translate="yes" xml:space="preserve">
           <source>Header comments</source>
           <target state="translated">Header commentato</target>
+        </trans-unit>
+        <trans-unit id="DebuggingDescription" translate="yes" xml:space="preserve">
+          <source>Find bugs in your code more easily</source>
+          <target state="translated">Trova errori più facilmente</target>
+        </trans-unit>
+        <trans-unit id="GuideDebuggingComment1" translate="yes" xml:space="preserve">
+          <source>Stop before the first loop operator</source>
+          <target state="translated">Stop al primo operatore nel loop</target>
+        </trans-unit>
+        <trans-unit id="GuideBreakpointTitle.Text" translate="yes" xml:space="preserve">
+          <source>Break inside a loop</source>
+          <target state="translated">Break all'interno di un loop</target>
+        </trans-unit>
+        <trans-unit id="GuideDebugging1.Text" translate="yes" xml:space="preserve">
+          <source>Do you wonder what's the point of that additional gray bar on the left? You can tap it to add a breakpoint at the corresponding line in your code. This makes it easier to work on larger scripts, as a breakpoint will cause the execution to halt and will let you inspect the current memory state at that location.</source>
+          <target state="translated">Ti sei chiesto a cosa serva quella barra grigia a sinistra? Puoi farci click sopra per aggiungere un breakpoint alla linea di codice corrispondente. Questo rende più facile lavorare su script di grandi dimensioni, perché un breakpoint fermerà l'esecuzione del codice e ti permetterà di controllare lo stato della memoria in quella posizione.</target>
+        </trans-unit>
+        <trans-unit id="GuideDebugging2.Text" translate="yes" xml:space="preserve">
+          <source>Here's a simple example:</source>
+          <target state="translated">Ecco un semplice esempio:</target>
+        </trans-unit>
+        <trans-unit id="GuideDebugging3.Text" translate="yes" xml:space="preserve">
+          <source>When you execute a script in debugging mode and hit a breakpoint, the app will show two options to control how to execute the rest of the script:</source>
+          <target state="translated">Quando esegui uno script in modalità debug e viene raggiunto un breakpoint, l'app mostrerà due opzioni per controllare come eseguire il resto dello script:</target>
+        </trans-unit>
+        <trans-unit id="GuideDebugging4.Text" translate="yes" xml:space="preserve">
+          <source>Keep in mind that the script execution is only halted when the control flow manages to reach a breakpoint, so it's possible to see code with even multiple breakpoints being run straight to the end. This can indicate that one or more loop conditions are not met, so part of the script is effectively being skipped.</source>
+          <target state="translated">Ricorda che l'esecuzione di uno script viene interrotta solo se il flusso di controllo raggiunge un breakpoint, quindi è possibile che codice con anche più di un breakpoint venga eseguito direttamente fino alla fine. Questo può indicare che una o più condizioni di loop non sono verificate, e che parte dello script è stata saltata.</target>
+        </trans-unit>
+        <trans-unit id="GuideDebuggingContinueDescription.Text" translate="yes" xml:space="preserve">
+          <source>Continue the execution in debugging mode</source>
+          <target state="translated">Riprende l'esecuzione in modalità debug</target>
+        </trans-unit>
+        <trans-unit id="GuideDebuggingSkipDescription.Text" translate="yes" xml:space="preserve">
+          <source>Run the rest of the script without breakpoints</source>
+          <target state="translated">Esegue il resto dello script senza breakpoint</target>
+        </trans-unit>
+        <trans-unit id="GuideDebugging5.Text" translate="yes" xml:space="preserve">
+          <source>As it turns out, breakpoints can help identify bugs even when they're not reached at all.</source>
+          <target state="translated"> In altre parole, usare breakpoint può aiutare a trovare bug anche quando questi non vengono neanche raggiunti.</target>
         </trans-unit>
       </group>
     </body>
