--- a/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
@@ -420,35 +420,8 @@
   <data name="DevelopedByRun.Text" xml:space="preserve">
     <value>Developed by</value>
   </data>
-  <data name="DevSupportTitle.Text" xml:space="preserve">
-    <value>Pick the support option for the developer of the app</value>
-  </data>
-  <data name="Donate" xml:space="preserve">
-    <value>Donate</value>
-  </data>
-  <data name="DonateButton.Title" xml:space="preserve">
-    <value>Donate</value>
-  </data>
-  <data name="DonateCoffee.PickerDescription" xml:space="preserve">
-    <value>Buy the developer a coffee</value>
-  </data>
-  <data name="DonateLove.PickerDescription" xml:space="preserve">
-    <value>Feeling generous? Choose this option to show the developer how much you love this app!</value>
-  </data>
-  <data name="DonatePresent.PickerDescription" xml:space="preserve">
-    <value>Make a small present to the developer to support the app</value>
-  </data>
-  <data name="DonateSupport.PickerDescription" xml:space="preserve">
-    <value>Actively support the app development with this bigger donation</value>
-  </data>
-  <data name="DonationCompleted" xml:space="preserve">
-    <value>Donation completed</value>
-  </data>
   <data name="DonationCompletedBody" xml:space="preserve">
     <value>Thank you so much for supporting Brainf*ck#!</value>
-  </data>
-  <data name="DonationErrorBody" xml:space="preserve">
-    <value>Something went wrong while trying to make the donation, try again later</value>
   </data>
   <data name="PurchaseCanceled" xml:space="preserve">
     <value>Purchase canceled</value>
@@ -842,5 +815,8 @@ This way he'll be able to help you!</value>
   </data>
   <data name="GuideDebugging5.Text" xml:space="preserve">
     <value>As it turns out, breakpoints can help identify bugs even when they're not reached at all.</value>
+  </data>
+  <data name="PurchaseErrorBody" xml:space="preserve">
+    <value>Something went wrong while trying to complete the purchase, try again later</value>
   </data>
 </root>
